--- a/angular asp.net core bootcamp/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/angular asp.net core bootcamp/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -32,10 +32,14 @@
               >Counter</a
             >
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
+          <li class="nav-item" [routerLinkActive]="['active']">
             <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
               >Fetch data</a
             >
+          </li>
+          <li class="nav-item" [routerLinkActive]="['active']">
+            <a class="nav-link text-dark" [routerLink]="['/product']"
+              >Product</a>
           </li>
         </ul>
       </div>
