--- a/angular asp.net core bootcamp/ClientApp/src/app/product/product-list/product-list.component.html
+++ b/angular asp.net core bootcamp/ClientApp/src/app/product/product-list/product-list.component.html
@@ -1,3 +1,7 @@
 <a class="btn btn-primary" [routerLink]="['/product/add']">
     Add Product
 </a>
+
+<p *ngFor="let p of products">
+  {{p.title}}
+</p>
