--- a/angular asp.net core bootcamp/ClientApp/src/app/product/product.component.html
+++ b/angular asp.net core bootcamp/ClientApp/src/app/product/product.component.html
@@ -1,1 +1,17 @@
-<p>product works!</p>
+<div class="row">
+  <div class="col-md-6">
+
+    <form #productAdd="ngForm" (ngSubmit)="addProduct();">
+      <div class="form-group">
+        <label>Title</label>
+        <input type="text" class="form-control" placeholder="Enter product title" name="title" [(ngModel)]="product.title" required>
+      </div>
+      <div class="form-group">
+        <label>Quantity</label>
+        <input type="number" class="form-control" placeholder="Enter product quantity" name="qty" [(ngModel)]="product.qty" required>
+      </div>
+      <button type="submit" [disabled]="!productAdd.valid" class="btn btn-primary">Add</button>
+    </form>
+
+  </div>
+</div>
