--- a/angular asp.net core bootcamp/ClientApp/src/app/product/product.component.html
+++ b/angular asp.net core bootcamp/ClientApp/src/app/product/product.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-6">
 
     <form #productAdd="ngForm" (ngSubmit)="productSubmit();">
-      <input type="text" class="form-control" placeholder="id" name="id" [(ngModel)]="product.id" *ngIf="check_add_update" required>
+      <input type="hidden" class="form-control" placeholder="id" name="id" [(ngModel)]="product.id" *ngIf="check_add_update" required>
       <div class="form-group">
         <label>Title</label>
         <input type="text" class="form-control" placeholder="Enter product title" name="title" [(ngModel)]="product.title" required>
