--- a/angular asp.net core bootcamp/ClientApp/src/app/product/product.component.html
+++ b/angular asp.net core bootcamp/ClientApp/src/app/product/product.component.html
@@ -1,17 +1,1 @@
-<div class="row">
-  <div class="col-md-6">
-
-    <form #productAdd="ngForm" (ngSubmit)="productSubmit();">
-      <input type="hidden" class="form-control" placeholder="id" name="id" [(ngModel)]="product.id" *ngIf="check_add_update" required>
-      <div class="form-group">
-        <label>Title</label>
-        <input type="text" class="form-control" placeholder="Enter product title" name="title" [(ngModel)]="product.title" required>
-      </div>
-      <div class="form-group">
-        <label>Quantity</label>
-        <input type="number" class="form-control" placeholder="Enter product quantity" name="qty" [(ngModel)]="product.qty" required>
-      </div>
-      <button type="submit" [disabled]="!productAdd.valid" class="btn btn-primary">Add</button>
-    </form>
-  </div>
-</div>
+<router-outlet></router-outlet>
